# PypKa

./: #.gitignore#  #README.md#  .#.gitignore  .bumpversion.cfg  .flake8  .gitignore  .mypy.ini  .readthedocs.yaml  CONTRIBUTING.rst  DataBaseT.crg  DataBaseT.siz  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  docs  pypka.py  pyproject.toml  setup.cfg  setup.py  update_local_pip.sh  version.py
.circleci/: config.yml  config.yml~
docs/: index.html  main.html  modules.rst  objects.inv  py-modindex.html  pypka.clean.rst  pypka.delphi4py.readFiles.rst  pypka.delphi4py.rst  pypka.delphi4py.rundelphi.rst  pypka.mc.rst  pypka.rst  requirements.txt
docs/_modules/: index.html  pypka.html
docs/source/: conf.py  development.rst  example.rst  future.rst  getting_started.rst  index.rst  methods.rst  pypka.rst  usage.rst  useful.rst  webserver.rst
examples/API/: pKas.out  run.py  titration.out
examples/CLI/: pKas.out
examples/docker/: pKas.out
examples/notebook/: pypka.ipynb
pypka/: .#pypka.py  .floo  .nfs0000000039e403330000ba44  .nfs0000000039e403350000ba55  __init__.py  __main__.py  _version.py  addHtaut  addHtaut_CHARMM  addHtaut_CHARMM36m  checksites.py  cleaning.py  cli.py  compile.sh  concurrency.py  config.py  constants.py  ffconverter.py  formats.py  log.py  main.py  mc.c  mc.pyx  mc_setup.py  molecule.py  pdb2pqr  pypka.py  tautomer.py  titsite.py
pypka.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pypka/AMBER14SB/: DataBaseT.crg  DataBaseT.siz
pypka/CHARMM36m/: DataBaseT.crg  DataBaseT.siz  DataBaseT_0_AT.siz  DataBaseT_2.siz  DataBaseT_2_AT.siz  DataBaseT_5.siz  DataBaseT_5_AT.siz  DataBaseT_old.crg  DataBaseT_old.siz  DataBaseT_template.crg  DataBaseT_template.siz  README.md  aa.rtp  c612_radius.py  extend_db.py  ffnonbonded.itp  merged.rtp
pypka/CHARMM36m_zero/: DataBaseT.crg  DataBaseT.siz
pypka/G54A7/: .#DataBaseT.crg  DataBaseT.crg  DataBaseT.crg~  DataBaseT.siz  DataBaseT.siz~  DataBaseT_.siz  DataBaseT_0RT.siz  DataBaseT_15.siz  DataBaseT_1RT.siz  DataBaseT_2.siz  DataBaseT_5.siz  DataBaseT_5RT.siz  DataBaseT_min.siz  DataBaseT_old.crg  DataBaseT_old.siz  DataBaseT_template.crg  DataBaseT_template.siz  DataBaseT_zero.siz  README.md  c612_radius.py  c612_radius_old.py  extend_db.py  ffG54a7pHt.rtp  ffG54a7pHtnb.itp
pypka/clean/: __init__.py  addHtaut  checksites.py  cleaning.py  ffconverter.py  formats.py  pdb_out.py  utils.py
pypka/delphi4py/: __init__.py  delphi4py.py
pypka/docs/: requirements.txt
pypka/mc/: decoupled_mc.py  mc.c  mc.pyx  mc_setup.py  run_mc.py
pypka/pdb2pqr/: apbs_cgi.cgi  index.html  main.py  test.pqr
pypka/scripts/: getDocsCoverage.sh  updateDocs.sh~
pypka/server/: app.py  pKas_202004031830237469611723587783144056408.out  pKas_202004031837202582468500865188065390268.out  pKas_20200403185921587949406889786860491014.out  pKas_202004101551161635873248557882406067639.out  pKas_202004101610450356708992757652828063140.out  pKas_202004101616166282607803739021783612540.out  subs.txt  titration_202004031829261479741723587783144056408.out  titration_202004031830237469611723587783144056408.out  titration_202004101551161635873248557882406067639.out  titration_202004101558015045833248557882406067639.out  titration_202004101611510633984942055290017262825.out  titration_202004101616166282607803739021783612540.out
pypka/tests/: .#test.py  .coverage  LOG_readFiles  LOG_runDelPhi_CT0_2002_modelcompound  LOG_runDelPhi_CT0_2002_wholeprotein  LOG_runDelPhi_CT0_2002_wholeprotein_focusing  LOG_runDelPhi_CT1_2002_modelcompound  LOG_runDelPhi_CT1_2002_wholeprotein  LOG_runDelPhi_CT1_2002_wholeprotein_focusing  LOG_runDelPhi_CT2_2002_modelcompound  LOG_runDelPhi_CT2_2002_wholeprotein  LOG_runDelPhi_CT2_2002_wholeprotein_focusing  LOG_runDelPhi_CT3_2002_modelcompound  LOG_runDelPhi_CT3_2002_wholeprotein  LOG_runDelPhi_CT3_2002_wholeprotein_focusing  LOG_runDelPhi_CT4_2002_modelcompound  LOG_runDelPhi_CT4_2002_wholeprotein  LOG_runDelPhi_CT4_2002_wholeprotein_focusing  LOG_runDelPhi_NT0_2001_modelcompound  LOG_runDelPhi_NT0_2001_wholeprotein  LOG_runDelPhi_NT0_2001_wholeprotein_focusing  LOG_runDelPhi_NT1_2001_modelcompound  LOG_runDelPhi_NT1_2001_wholeprotein  LOG_runDelPhi_NT1_2001_wholeprotein_focusing  LOG_runDelPhi_NT2_2001_modelcompound  LOG_runDelPhi_NT2_2001_wholeprotein  LOG_runDelPhi_NT2_2001_wholeprotein_focusing  LOG_runDelPhi_NT3_2001_modelcompound  LOG_runDelPhi_NT3_2001_wholeprotein  LOG_runDelPhi_NT3_2001_wholeprotein_focusing  P_2002-CT0.crg  _home_pedror_MMS@FCUL_pypka_pypka_cleaning_py.html  _home_pedror_MMS@FCUL_pypka_pypka_cli_py.html  _home_pedror_MMS@FCUL_pypka_pypka_concurrency_py.html  _home_pedror_MMS@FCUL_pypka_pypka_config_py.html  _home_pedror_MMS@FCUL_pypka_pypka_formats_py.html  _home_pedror_MMS@FCUL_pypka_pypka_log_py.html  _home_pedror_MMS@FCUL_pypka_pypka_molecule_py.html  _home_pedror_MMS@FCUL_pypka_pypka_pdb2pqr_pdb2pqr_py.html  (+13 more)
sts/: ACAtau2.st  ACAtau4.st  ASPall.st  BALtau3.st  CTALAtau1.st  CTALAtau2.st  CTRtau4.st  CYStau3.st  DXtau1.st  GLUall.st  GLUtau1.st  HEMall.st  LYStau1.st  NTLYStau2.st  OLAtau3.st  PAtau3.st  PIXtau2.st  PIXtau4.st  PIXtau5.st
tests/: test.py  titration.out
tests/builder/: posre.itp  (+2 more)
(+2499 files in other folders)
