[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''(
  _version.py
| clean/pdb2pqr/
)'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.tox]
legacy_tox_ini = """
[tox]
envlist=py35,py36,py37,py38,py39
changedir=./tests/

[testenv]
deps=
    pytest
commands=
    py{35,36,37,38,39}: pytest test.py
"""
[tool.poetry]
name = "pypka"
version = "2.7.0"
description = "A python module for flexible Poisson-Boltzmann based pKa calculations with proton tautomerism"
authors = ["Pedro Reis <pdreis@fc.ul.pt>"]
license = "LGPLv3"
readme = "README.md"
homepage = "https://pypka.org"
repository = "https://github.com/mms-fcul/PypKa"
documentation = "https://pypka.readthedocs.io/en/latest/"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.6"
psutil = "*"
numpy = "*"
pytest = "^6.2.5"
delphi4py = "^1.0.1"
pdbmender = "^0.3.0"

[tool.poetry.dev-dependencies]
recommonmark = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
flake8 = "*"
mypy = "*"
bump2version = "*"
pytest = "*"
coverage = "*"
pytest-cov = "*"
isort = "*"
tox = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
