[metadata]
name = pypKa
author = Pedro B.P.S. Reis
author_email = pdreis@fc.ul.pt
description = A python module for flexible Poisson-Boltzmann based pKa calculations with proton tautomerism
license = LGPLv3
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Cython
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.6.1
setup_requires =
    setuptools_scm
install_requires =
    numpy
    pytest
    coverage
    psutil

[options.entry_points]
console_scripts =
    pypka = pypka.pypka:CLI

