[bumpversion]
current_version = 2.0.1
commit = True
tag = True

[metadata]
name = pypKa
author = Pedro B.P.S. Reis
author_email = pdreis@fc.ul.pt
description = A python module for flexible Poisson-Boltzmann based pKa calculations with proton tautomerism
url = https://github.com/mms-fcul/PypKa
license = LGPLv3
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
	Programming Language :: Python
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Cython
	Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.5.1
setup_requires = 
	setuptools_scm
install_requires = 
	numpy
	psutil
test_requires = 
	pytest
	coverage

[options.entry_points]
console_scripts = 
	pypka = pypka.cli:CLI

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:pypka/_version.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 100
exclude = 
	.git,
	__pycache__,
	docs,
	tests,
	build,
	dist,
	pypka/clean/pdb2pqr
max-complexity = 10

[mypy]
python_version = 3.7
files = 
	pypka/*.py,
	pypka/clean/*.py
ignore_missing_imports = True
